# Ashare_financial_report_filter

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/: Syllabus.md  book-outline.md  project-structure.md
examples/: sample_company.json
src/tang_financial_analysis/: __init__.py  cli.py
src/tang_financial_analysis/analysis/: __init__.py  pipeline.py  trend.py
src/tang_financial_analysis/domain/: __init__.py  models.py
src/tang_financial_analysis/metrics/: __init__.py  ratios.py
src/tang_financial_analysis/parsers/: __init__.py  json_parser.py
src/tang_financial_analysis/ports/: __init__.py  financial_data.py  narrator.py
src/tang_financial_analysis/providers/: __init__.py  akshare_data.py  plain_text.py
src/tang_financial_analysis/tools/: __init__.py  analyze_company.py
tests/: test_akshare_provider.py  test_analysis.py  test_metrics.py  test_trend.py
