[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tang-financial-analysis"
version = "0.1.0"
description = "按唐朝《手把手教你读财报》的逻辑分析企业财报"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
data = ["akshare>=1.18.64"]

[project.scripts]
tang-report = "tang_financial_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
